Call newInstance on Constructor of driverClass (#1290)
Class.newInstance is deprecated as of Java 9. Usage should be replaced by calling Class.get(Declared)Constructor.newInstance